--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" sizes="64*64" href="/food.png"/>
   <link
     href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&family=Italianno&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>SimpleFoods</title>
 </head>
 
 <body>
